--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ POSTGRES_USER=appseed
 POSTGRES_PASSWORD=appseed
 POSTGRES_DB=appseed
 
-DATABASE_USER=root
-DATABASE_PASSWORD=toor
+DATABASE_USER=username
+DATABASE_PASSWORD=password
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3306
-DATABASE_NAME=appseed
+DATABASE_NAME=dbname
