--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+export FLASK_APP=run.py
+export FLASK_DEBUG=True
+export FLASK_ENV=development
 APPSEED_CONFIG_MODE=Debug
 POSTGRES_USER=appseed
 POSTGRES_PASSWORD=appseed
